Fixed bug with z-index of many widgets

--- a/assets/DropdownContent.less
+++ b/assets/DropdownContent.less
@@ -78,7 +78,7 @@
 
   .wrapper {
     position: relative;
-    z-index: 10000;
+    //z-index: 10000;
     input {
       //@media (max-width: 1200px) {
       //  font-size: 10px;
